2005-04-25  Dick Porter  <dick@ximian.com>

	* sockets.c: 
	* io.c: 
	* wapi-private.h (struct _WapiHandleOps): 
	* handles.c (_wapi_handle_unref): When destroying handles, save
	the handle data and call the close function only after the array
	slot has been cleared.  This prevents race conditions with file
	descriptors, fixing bug 74713.

	* mutexes.c: Delete the handle close functions, they didn't do
	anything anyway

	* error.c (_wapi_get_win32_file_error): Add a mapping for EINTR so
	the "Unknown error" g_warning doesn't get displayed.

2005-04-25  Dick Porter  <dick@ximian.com>

	* wapi-private.h: 
	* threads.c: Make thread handles process-private for now to take
	some of the space pressure off the shared memory, while I work on
	a real fix.

2005-04-21  Dick Porter  <dick@ximian.com>

	* handles.c (_wapi_handle_check_share): Make sure there is a "fd"
	dir in /proc before blowing away handle info.  Fixes bug 74649.

2005-04-21  Dick Porter  <dick@ximian.com>

	* wait.c (WaitForMultipleObjectsEx): Implement special waits

	* handles.c (_wapi_handle_wait_signal_poll_share): Don't return a
	timeout, just wait briefly for the private signals and let the
	waiting thread test again.  This prevents us missing shared
	signals.

2005-04-21  Dick Porter  <dick@ximian.com>

	* collection.h (_WAPI_HANDLE_COLLECTION_EXPIRED_INTERVAL): Reduce
	the time before a slot is considered too old and deleted.  This is
	a workaround while I come up with a proper fix.

2005-04-21  Dick Porter  <dick@ximian.com>

	* mutexes.c: 
	* processes.c: 
	* threads.c: 
	* handles.c (_wapi_handle_new): Turn assertions into errors.

	* collection.c (_wapi_handle_collect): Use symbols not magic
	numbers for timeout values

2005-04-19  Dick Porter  <dick@ximian.com>

	* mutexes.c: 
	* wait.c: 
	* handles.c (_wapi_handle_count_signalled_handles)
	* handles-private.h (_wapi_handle_shared_lock_handle): Use new
	shared handle locks in critical sections.
